<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="akos.online.simplyweather.MainActivity">

    <item
        android:id="@+id/action_help"
        android:orderInCategory="99"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_db"
        android:orderInCategory="98"
        android:title="@string/action_delete_db"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="97"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
</menu>
