<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        app:cardUseCompatPadding="true"
        android:id="@+id/det_top_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/det_current_txt"
                android:layout_alignParentLeft="true"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/cardview_details_current"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="10dp"
                />

            <RelativeLayout
                android:id="@+id/det_temp_lay"
                android:layout_below="@id/det_current_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/det_temp_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorTempDay"
                    />

                <TextView
                    android:id="@+id/det_temp_slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/det_temp_day"
                    android:textSize="20sp"
                    android:text=" / "
                    />

                <TextView
                    android:id="@+id/det_temp_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/det_temp_slash"
                    android:textSize="20sp"
                    android:textColor="@color/colorTempNight"
                    />

                <TextView
                    android:id="@+id/det_cond_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/det_temp_slash"
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/det_clouds_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/det_temp_lay"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_clouds"
                    android:layout_alignParentLeft="true"
                    android:text="@string/det_cloudness"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_clouds_val"
                    android:layout_toRightOf="@id/det_clouds"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/det_pressure_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/det_clouds_lay">

                <TextView
                    android:id="@+id/det_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/det_pressure"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/det_pressure_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/det_pressure"
                    android:textSize="20sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/det_humidity_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/det_pressure_lay">

                <TextView
                    android:id="@+id/det_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/det_humidity"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/det_humidity_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/det_humidity"
                    android:textSize="20sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/det_humidity_lay">

                <TextView
                    android:id="@+id/det_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/det_wind_speed"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/det_wind_speed_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/det_wind_speed"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>